# cslibs_math

./: .gitlab-ci.yml  README.md
cslibs_math/: CMakeLists.txt  package.xml
cslibs_math/benchmark/: benchmark_angles.cpp  benchmark_exp.cpp  benchmark_fractional.cpp  write_fraction_exponent_log2.cpp
cslibs_math/cmake/: cslibs_math_add_benchmark.cmake  cslibs_math_add_unit_test_gtest.cmake  cslibs_math_add_unit_test_ros.cmake  cslibs_math_cfg_extras.cmake  cslibs_math_enable_c++17.cmake  cslibs_math_extras.cmake  cslibs_math_show_headers.cmake
cslibs_math/include/cslibs_math/approx/: exp.hpp  fractional.hpp  log.hpp  sqrt.hpp
cslibs_math/include/cslibs_math/color/: color.hpp
cslibs_math/include/cslibs_math/common/: angle.hpp  array.hpp  div.hpp  equal.hpp  floor.hpp  framed.hpp  index.hpp  log_odds.hpp  mod.hpp  pow.hpp  sqrt.hpp
cslibs_math/include/cslibs_math/linear/: eigen.hpp  hausdorff.hpp  line.hpp  matrix.hpp  pointcloud.hpp  vector.hpp
cslibs_math/include/cslibs_math/random/: random.hpp
cslibs_math/include/cslibs_math/sampling/: normal.hpp  traits.hpp  uniform.hpp
cslibs_math/include/cslibs_math/serialization/: array.hpp  binary.hpp  distribution.hpp  eigen.hpp  matrix.hpp  stable_distribution.hpp  stable_weighted_distribution.hpp  types.hpp  vector.hpp  weighted_distribution.hpp
cslibs_math/include/cslibs_math/statistics/: angular_mean.hpp  bhattacharyya.hpp  distribution.hpp  distribution_1d.hpp  limit_covariance.hpp  limit_eigen_values.hpp  mean.hpp  stable_distribution.hpp  stable_weighted_distribution.hpp  weighted_angular_mean.hpp  weighted_distribution.hpp  weighted_quaternion_mean.hpp
cslibs_math/include/cslibs_math/utility/: stamped.hpp  tiny_time.hpp  traits.hpp
cslibs_math/scripts/: log2_exponent  log2_fraction  log2_values  optimize.py
cslibs_math/test/: array.cpp  distribution.cpp  distribution_serialization.cpp  div.cpp  floor.cpp  hausdorff.cpp  mod.cpp  random.cpp  sqrt.cpp  test_distribution.hpp  test_distribution.test  test_distribution_float.test  test_distribution_serialization.cpp  test_exp.cpp  test_fractional.cpp  test_log.cpp  test_mod.cpp  test_node_distribution.cpp  test_node_distribution_float.cpp  test_pow.cpp  test_random.cpp  test_sqrt.cpp
cslibs_math_2d/: CMakeLists.txt  package.xml
cslibs_math_2d/benchmark/: benchmark_transform_2d.cpp  benchmark_vector_2d.cpp
cslibs_math_2d/include/cslibs_math_2d/: box_2d.hpp  convert.hpp  covariance_2d.hpp  line_2d.hpp  point_2d.hpp  pose_2d.hpp  transform_2d.hpp  vector_2d.hpp
cslibs_math_2d/include/cslibs_math_2d/algorithms/: amanatides.hpp  amantidis.hpp  bresenham.hpp  bresenham_half.hpp  efla_iterator.hpp  icp.hpp  ndt_iterator.hpp  simple_iterator.hpp
cslibs_math_2d/include/cslibs_math_2d/conversion/: boost.hpp  ros.hpp  tf.hpp
cslibs_math_2d/include/cslibs_math_2d/linear/: box.hpp  covariance.hpp  ellipse.hpp  line.hpp  point.hpp  pointcloud.hpp  polar_point.hpp  polar_pointcloud.hpp  pose.hpp  transform.hpp  vector.hpp
cslibs_math_2d/include/cslibs_math_2d/serialization/: transform.hpp
cslibs_math_2d/include/cslibs_math_2d/types/: box.hpp  covariance.hpp  line.hpp  point.hpp  pointcloud.hpp  pointcloud_with_origin.hpp  pose.hpp  transform.hpp  vector.hpp
cslibs_math_2d/test/: amantidis.cpp  box.cpp  ellipse_test.cpp  ray_tracing.cpp  transform.cpp  vector.cpp
cslibs_math_3d/: CMakeLists.txt  package.xml
cslibs_math_3d/benchmark/: benchmark_transform_3d.cpp  benchmark_vector_3d.cpp
cslibs_math_3d/include/cslibs_math_3d/algorithms/: amanatides.hpp  amantidis.hpp  bresenham.hpp  efla_iterator.hpp  icp.hpp  ndt_iterator.hpp  simple_iterator.hpp
cslibs_math_3d/include/cslibs_math_3d/conversion/: boost.hpp  ros.hpp  tf.hpp
cslibs_math_3d/include/cslibs_math_3d/linear/: box.hpp  covariance.hpp  line.hpp  point.hpp  pointcloud.hpp  pose.hpp  quaternion.hpp  structured_pointcloud.hpp  transform.hpp  vector.hpp
cslibs_math_3d/include/cslibs_math_3d/serialization/: quaternion.hpp  transform.hpp
cslibs_math_3d/test/: point.cpp  quaternion.cpp  ray_tracing.cpp  transform.cpp
cslibs_math_ros/: CMakeLists.txt  package.xml
cslibs_math_ros/include/cslibs_math_ros/geometry_msgs/: conversion_2d.hpp  conversion_3d.hpp
cslibs_math_ros/include/cslibs_math_ros/sensor_msgs/: conversion_2d.hpp  conversion_3d.hpp
cslibs_math_ros/include/cslibs_math_ros/tf/: conversion_2d.hpp  conversion_3d.hpp  tf_listener.hpp  tf_listener_2d.hpp  tf_listener_3d.hpp  tf_provider.hpp
