<?xml version="1.0"?>
<package>
  <name>cslibs_math</name>
  <version>0.0.1</version>
  <description>The muse_smc_math package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
