<?xml version="1.0"?>
<package>
  <name>cslibs_math_2d</name>
  <version>0.0.1</version>
  <description>The muse_smc_math_2d package</description>

  <maintainer email="hanten@todo.todo">hanten</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cslibs_math</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>cslibs_math</run_depend>
  <run_depend>tf</run_depend>


  <export>
  </export>
</package>
