<?xml version="1.0"?>
<package format="2">
  <name>cslibs_math_2d</name>
  <version>0.0.1</version>
  <description>The muse_smc_math_2d package</description>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_math</depend>

  <export>
  </export>
</package>
