<?xml version="1.0"?>
<package format="2">
  <name>cslibs_math_3d</name>
  <version>0.0.1</version>
  <description>
    The cslibs_math_3d package mainly provides template instances and algorithms for the 3d space.
  </description>

  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_math</depend>

  <export>
  </export>
</package>
