<?xml version="1.0"?>
<package format="2">
  <name>cslibs_math_ros</name>
  <version>0.0.1</version>
  <description>
    The cslibs_math_ros package provides functionality to convert TF math data types
    to cslibs_math types.
  </description>

  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>
  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cslibs_math</depend>

  <export>
  </export>
</package>
